--- a/IsmBootcampScheduling/IsmBootcampScheduling.csproj
+++ b/IsmBootcampScheduling/IsmBootcampScheduling.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.4" />
   </ItemGroup>
 
